<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/spacing_normal"
    >

    <oak.widget.TextViewWithFont
        style="@style/MicrochipLabel1"
        android:text="@string/settings_device_info"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        />

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/settings_server_address"
        style="@style/MicrochipEditText"
        android:hint="@string/settings_server_address"
        android:nextFocusDown="@+id/settings_device_uuid"
        android:imeOptions="actionNext"
        android:inputType="textUri"
        app:floatLabelColor="@color/blue"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        />

    <View
        style="@style/MicrochipDivider"
        android:layout_marginTop="@dimen/spacing_normal"
        />

    <oak.widget.TextViewWithFont
        style="@style/MicrochipLabel1"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/settings_server_trust"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        />

    <RelativeLayout
        style="@style/MatchWidthWrapHeight"
        android:layout_marginTop="@dimen/spacing_large"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        >

        <oak.widget.TextViewWithFont
            style="@style/MicrochipLabel3"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/settings_ignore_error"
            />

        <android.ble.wcm.microchip.com.microchip.widget.MicrochipSwitch
            android:id="@+id/ignore_error_switch"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            style="@style/MicrochipSwitch"
            />

    </RelativeLayout>

    <View
        style="@style/MicrochipDivider"
        android:layout_marginTop="@dimen/spacing_normal"
        />

</LinearLayout>